@@ -5,7 +5,6 @@
  */
 package edu.kit.datamanager.metastore2.test;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import edu.kit.datamanager.entities.PERMISSION;
 import edu.kit.datamanager.metastore2.dao.IMetadataSchemaDao;
@@ -27,14 +26,19 @@ import java.util.Set;
 import java.util.stream.Stream;
 import org.junit.Assert;
 import org.junit.Before;
+import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
+import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.mock.web.MockMultipartFile;
+import org.springframework.restdocs.JUnitRestDocumentation;
+import static org.springframework.restdocs.mockmvc.MockMvcRestDocumentation.documentationConfiguration;
 import org.springframework.security.test.context.support.WithSecurityContextTestExecutionListener;
+import org.springframework.security.web.FilterChainProxy;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.TestExecutionListeners;
 import org.springframework.test.context.junit4.SpringRunner;
@@ -47,10 +51,13 @@ import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
+import org.springframework.test.web.servlet.request.RequestPostProcessor;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.redirectedUrlPattern;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
+import org.springframework.web.context.WebApplicationContext;
 
 /**
  *
@@ -65,8 +72,10 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
   TransactionalTestExecutionListener.class,
   WithSecurityContextTestExecutionListener.class})
 @ActiveProfiles("test")
-public class SchemaRegistryControllerTest{
+public class SchemaRegistryControllerTest {
 
+  private final static String TEMP_DIR_4_SCHEMAS = "/tmp/metastore2/";
+  private static final String INVALID_SCHEMA = "invalid_dc";
   private final static String DC_SCHEMA = "<schema targetNamespace=\"http://www.openarchives.org/OAI/2.0/oai_dc/\"\n"
           + "        xmlns:oai_dc=\"http://www.openarchives.org/OAI/2.0/oai_dc/\"\n"
           + "        xmlns:dc=\"http://purl.org/dc/elements/1.1/\"\n"
@@ -118,29 +127,102 @@ public class SchemaRegistryControllerTest{
           + "  <dc:type>dataset</dc:type>\n"
           + "</oai_dc:dc>";
 
-  @Autowired
   private MockMvc mockMvc;
+  @Autowired
+  private WebApplicationContext context;
+  @Autowired
+  private FilterChainProxy springSecurityFilterChain;
   @Autowired
   private IMetadataSchemaDao metadataSchemaDao;
   @Autowired
   private IAuditService<MetadataSchemaRecord> schemaAuditService;
+  @Rule
+  public JUnitRestDocumentation restDocumentation = new JUnitRestDocumentation();
 
   @Before
-  public void setUp() throws Exception{
+  public void setUp() throws Exception {
     metadataSchemaDao.deleteAll();
-    try{
-      try(Stream<Path> walk = Files.walk(Paths.get(URI.create("file:///Users/jejkal/tmp/my_dc/")))){
+    try {
+      try (Stream<Path> walk = Files.walk(Paths.get(URI.create("file://" + TEMP_DIR_4_SCHEMAS)))) {
         walk.sorted(Comparator.reverseOrder())
                 .map(Path::toFile)
                 .forEach(File::delete);
       }
-    } catch(IOException ex){
+      Paths.get(TEMP_DIR_4_SCHEMAS).toFile().mkdir();
+      Paths.get(TEMP_DIR_4_SCHEMAS + INVALID_SCHEMA).toFile().createNewFile();
+    } catch (IOException ex) {
       ex.printStackTrace();
     }
+    this.mockMvc = MockMvcBuilders.webAppContextSetup(this.context)
+            .addFilters(springSecurityFilterChain)
+            .apply(documentationConfiguration(this.restDocumentation))
+            .build();
   }
 
-  @Test
-  public void testCreateSchemaRecord() throws Exception{
+    @Test
+    public void testCreateSchemaRecord() throws Exception {
+      MetadataSchemaRecord record = new MetadataSchemaRecord();
+      record.setSchemaId("my_dc");
+      record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
+      record.setMimeType(MediaType.APPLICATION_XML.toString());
+      Set<AclEntry> aclEntries = new HashSet<>();
+      aclEntries.add(new AclEntry("test", PERMISSION.READ));
+      aclEntries.add(new AclEntry("SELF", PERMISSION.ADMINISTRATE));
+      record.setAcl(aclEntries);
+      ObjectMapper mapper = new ObjectMapper();
+
+      MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
+      MockMultipartFile schemaFile = new MockMultipartFile("schema", DC_SCHEMA.getBytes());
+
+      this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+              file(recordFile).
+              file(schemaFile)).andDo(print()).andExpect(status().isCreated()).andReturn();
+    }
+
+    @Test
+    public void testCreateSchemaRecordWithLocationUri() throws Exception {
+      MetadataSchemaRecord record = new MetadataSchemaRecord();
+      record.setSchemaId("my_dc_new");
+      record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
+      record.setMimeType(MediaType.APPLICATION_XML.toString());
+      Set<AclEntry> aclEntries = new HashSet<>();
+      aclEntries.add(new AclEntry("test", PERMISSION.READ));
+      aclEntries.add(new AclEntry("SELF", PERMISSION.ADMINISTRATE));
+      record.setAcl(aclEntries);
+      ObjectMapper mapper = new ObjectMapper();
+
+      MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
+      MockMultipartFile schemaFile = new MockMultipartFile("schema", DC_SCHEMA.getBytes());
+
+      MvcResult result = this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+              file(recordFile).
+              file(schemaFile)).andDo(print()).andExpect(status().isCreated()).andExpect(redirectedUrlPattern("http://*:*/**/" + record.getSchemaId() + "?version=1")).andReturn();
+      String locationUri = result.getResponse().getHeader("Location");
+      String content = result.getResponse().getContentAsString();
+
+      MvcResult result2 = this.mockMvc.perform(get(locationUri).header("Accept", MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE)).andDo(print()).andExpect(status().isOk()).andReturn();
+      String content2 = result2.getResponse().getContentAsString();
+
+      Assert.assertEquals(content, content2);
+    }
+
+    @Test
+    public void testCreateInvalidSchemaRecord() throws Exception {
+      MetadataSchemaRecord record = new MetadataSchemaRecord();
+      record.setSchemaId(INVALID_SCHEMA);
+      record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
+      record.setMimeType(MediaType.APPLICATION_XML.toString());
+      ObjectMapper mapper = new ObjectMapper();
+
+      MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
+      MockMultipartFile schemaFile = new MockMultipartFile("schema", DC_SCHEMA.getBytes());
+
+      this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+              file(recordFile).
+              file(schemaFile)).andDo(print()).andExpect(status().isInternalServerError()).andReturn();
+    }
+    // @Test 
+  public void testCreateSchemaRecordFromExternal() throws Exception {
     MetadataSchemaRecord record = new MetadataSchemaRecord();
     record.setSchemaId("my_dc");
     record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
@@ -149,14 +231,54 @@ public class SchemaRegistryControllerTest{
 
     MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
     MockMultipartFile schemaFile = new MockMultipartFile("schema", DC_SCHEMA.getBytes());
+    RequestPostProcessor rpp = new RequestPostProcessor() {
+      @Override
+      public MockHttpServletRequest postProcessRequest(MockHttpServletRequest mhsr) {
+        throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
+      }
+    };
 
     this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
             file(recordFile).
-            file(schemaFile)).andDo(print()).andExpect(status().isCreated()).andReturn();
+            file(schemaFile).with(remoteAddr("any.external.domain"))).andDo(print()).andExpect(status().isCreated()).andReturn();
+  }
+
+  //@Test @ToDo Set external remote address.
+  public void testCreateSchemaRecordUpdateFromExternal() throws Exception {
+    MetadataSchemaRecord record = new MetadataSchemaRecord();
+    record.setSchemaId("my_dcExt");
+    record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
+    record.setMimeType(MediaType.APPLICATION_XML.toString());
+    ObjectMapper mapper = new ObjectMapper();
+
+    MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", DC_SCHEMA.getBytes());
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+            file(recordFile).
+            file(schemaFile).with(remoteAddr("any.domain.com"))).andDo(print()).andExpect(status().isCreated()).andReturn();
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+            file(recordFile).
+            file(schemaFile).with(remoteAddr("www.google.com"))).andDo(print()).andExpect(status().isCreated()).andReturn();
   }
 
   @Test
-  public void testCreateSchemaRecordGuessingType() throws Exception{
+  public void testCreateSchemaRecordWrongType() throws Exception {
+    MetadataSchemaRecord record = new MetadataSchemaRecord();
+    record.setSchemaId("my_dc");
+    record.setMimeType(MediaType.APPLICATION_XML.toString());
+    record.setType(MetadataSchemaRecord.SCHEMA_TYPE.JSON);
+    ObjectMapper mapper = new ObjectMapper();
+
+    MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", DC_SCHEMA.getBytes());
+
+    MvcResult res = this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+            file(recordFile).
+            file(schemaFile)).andDo(print()).andExpect(status().isUnprocessableEntity()).andReturn();
+  }
+
+  @Test
+  public void testCreateSchemaRecordGuessingType() throws Exception {
     MetadataSchemaRecord record = new MetadataSchemaRecord();
     record.setSchemaId("my_dc");
     record.setMimeType(MediaType.APPLICATION_XML.toString());
@@ -173,7 +295,7 @@ public class SchemaRegistryControllerTest{
   }
 
   @Test
-  public void testCreateSchemaRecordGuessingTypeFails() throws Exception{
+  public void testCreateSchemaRecordGuessingTypeFails() throws Exception {
     MetadataSchemaRecord record = new MetadataSchemaRecord();
     record.setSchemaId("my_dc");
     record.setMimeType(MediaType.APPLICATION_XML.toString());
@@ -189,7 +311,7 @@ public class SchemaRegistryControllerTest{
   }
 
   @Test
-  public void testCreateSchemaRecordWithBadSchema() throws Exception{
+  public void testCreateSchemaRecordWithBadSchema() throws Exception {
     MetadataSchemaRecord record = new MetadataSchemaRecord();
     record.setSchemaId("my_dc");
     record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
@@ -202,18 +324,46 @@ public class SchemaRegistryControllerTest{
     this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
             file(recordFile).
             file(schemaFile)).andDo(print()).andExpect(status().isUnprocessableEntity()).andReturn();
-
   }
 
   @Test
-  public void testCreateSchemaRecordWithoutRecord() throws Exception{
+  public void testCreateSchemaRecordWithEmptySchema() throws Exception {
+    MetadataSchemaRecord record = new MetadataSchemaRecord();
+    record.setSchemaId("my_dc");
+    record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
+    record.setMimeType(MediaType.APPLICATION_XML.toString());
+    ObjectMapper mapper = new ObjectMapper();
+
+    MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", "".getBytes());
+
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+            file(recordFile).
+            file(schemaFile)).andDo(print()).andExpect(status().isBadRequest()).andReturn();
+  }
+
+  @Test
+  public void testCreateSchemaRecordWithoutRecord() throws Exception {
     MockMultipartFile schemaFile = new MockMultipartFile("schema", DC_SCHEMA.getBytes());
     this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
             file(schemaFile)).andDo(print()).andExpect(status().isBadRequest()).andReturn();
   }
 
   @Test
-  public void testCreateSchemaRecordWithBadRecord() throws Exception{
+  public void testCreateSchemaRecordWithoutSchema() throws Exception {
+    MetadataSchemaRecord record = new MetadataSchemaRecord();
+    record.setSchemaId("my_dc");
+    record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
+    record.setMimeType(MediaType.APPLICATION_XML.toString());
+    ObjectMapper mapper = new ObjectMapper();
+
+    MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+            file(recordFile)).andDo(print()).andExpect(status().isBadRequest()).andReturn();
+  }
+
+  @Test
+  public void testCreateSchemaRecordWithBadRecord() throws Exception {
     ObjectMapper mapper = new ObjectMapper();
 
     MetadataSchemaRecord record = new MetadataSchemaRecord();
@@ -230,9 +380,9 @@ public class SchemaRegistryControllerTest{
   }
 
   @Test
-  public void testCreateTwoVersionsOfSchemaRecord() throws Exception{
+  public void testCreateTwoVersionsOfSchemaRecord() throws Exception {
     MetadataSchemaRecord record = new MetadataSchemaRecord();
-    record.setSchemaId("my_dc");
+    record.setSchemaId("my_dc_with_version");
     record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
     record.setMimeType(MediaType.APPLICATION_XML.toString());
     ObjectMapper mapper = new ObjectMapper();
@@ -256,7 +406,7 @@ public class SchemaRegistryControllerTest{
   }
 
   @Test
-  public void testGetSchemaRecordByIdWithoutVersion() throws Exception{
+  public void testGetSchemaRecordByIdWithoutVersion() throws Exception {
     createDcSchema();
 
     MvcResult res = this.mockMvc.perform(get("/api/v1/schemas/dc").header("Accept", MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE)).andDo(print()).andExpect(status().isOk()).andReturn();
@@ -269,7 +419,7 @@ public class SchemaRegistryControllerTest{
   }
 
   @Test
-  public void testGetSchemaRecordByIdWithVersion() throws Exception{
+  public void testGetSchemaRecordByIdWithVersion() throws Exception {
     createDcSchema();
 
     MvcResult res = this.mockMvc.perform(get("/api/v1/schemas/dc").param("version", "1").header("Accept", MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE)).andDo(print()).andExpect(status().isOk()).andReturn();
@@ -281,19 +431,19 @@ public class SchemaRegistryControllerTest{
   }
 
   @Test
-  public void testGetSchemaRecordByIdWithInvalidId() throws Exception{
+  public void testGetSchemaRecordByIdWithInvalidId() throws Exception {
     createDcSchema();
     this.mockMvc.perform(get("/api/v1/schemas/cd").header("Accept", MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE)).andDo(print()).andExpect(status().isNotFound()).andReturn();
   }
 
   @Test
-  public void testGetSchemaRecordByIdWithInvalidVersion() throws Exception{
+  public void testGetSchemaRecordByIdWithInvalidVersion() throws Exception {
     createDcSchema();
     this.mockMvc.perform(get("/api/v1/schemas/dc").param("version", "13").header("Accept", MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE)).andDo(print()).andExpect(status().isNotFound()).andReturn();
   }
 
   @Test
-  public void testFindRecordsBySchemaId() throws Exception{
+  public void testFindRecordsBySchemaId() throws Exception {
     createDcSchema();
     MvcResult res = this.mockMvc.perform(get("/api/v1/schemas/").param("schemaId", "dc")).andDo(print()).andExpect(status().isOk()).andReturn();
     ObjectMapper map = new ObjectMapper();
@@ -303,7 +453,7 @@ public class SchemaRegistryControllerTest{
   }
 
   @Test
-  public void testFindRecordsByMimeType() throws Exception{
+  public void testFindRecordsByMimeType() throws Exception {
     createDcSchema();
     MvcResult res = this.mockMvc.perform(get("/api/v1/schemas/").param("mimeType", MediaType.APPLICATION_XML.toString())).andDo(print()).andExpect(status().isOk()).andReturn();
     ObjectMapper map = new ObjectMapper();
@@ -313,7 +463,7 @@ public class SchemaRegistryControllerTest{
   }
 
   @Test
-  public void testFindRecordsByInvalidMimeType() throws Exception{
+  public void testFindRecordsByInvalidMimeType() throws Exception {
     createDcSchema();
     MvcResult res = this.mockMvc.perform(get("/api/v1/schemas/").param("mimeType", "invalid")).andDo(print()).andExpect(status().isOk()).andReturn();
     ObjectMapper map = new ObjectMapper();
@@ -323,7 +473,7 @@ public class SchemaRegistryControllerTest{
   }
 
   @Test
-  public void testFindRecordsByUnknownSchemaId() throws Exception{
+  public void testFindRecordsByUnknownSchemaId() throws Exception {
     createDcSchema();
     MvcResult res = this.mockMvc.perform(get("/api/v1/schemas/").param("schemaId", "cd")).andDo(print()).andExpect(status().isOk()).andReturn();
     ObjectMapper map = new ObjectMapper();
@@ -333,18 +483,18 @@ public class SchemaRegistryControllerTest{
   }
 
   @Test
-  public void testGetSchemaDocument() throws Exception{
+  public void testGetSchemaDocument() throws Exception {
     createDcSchema();
     MvcResult result = this.mockMvc.perform(get("/api/v1/schemas/dc")).andDo(print()).andExpect(status().isOk()).andReturn();
     String content = result.getResponse().getContentAsString();
 
-    String dcSchema = java.nio.file.Files.readString(Paths.get(URI.create("file:///tmp/dc.xsd")));
+    String dcSchema = new String(java.nio.file.Files.readAllBytes(Paths.get(URI.create("file:///tmp/dc.xsd"))));
 
     Assert.assertEquals(dcSchema, content);
   }
 
   @Test
-  public void testGetSchemaDocumentWithMissingSchemaFile() throws Exception{
+  public void testGetSchemaDocumentWithMissingSchemaFile() throws Exception {
     createDcSchema();
 
     //delete schema file
@@ -354,14 +504,32 @@ public class SchemaRegistryControllerTest{
   }
 
   @Test
-  public void testValidate() throws Exception{
+  public void testValidate() throws Exception {
 
     createDcSchema();
     this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/dc/validate").file("document", DC_DOCUMENT.getBytes())).andDo(print()).andExpect(status().isNoContent()).andReturn();
   }
 
   @Test
-  public void testValidateWithInvalidDocument() throws Exception{
+  public void testValidateUnknownVersion() throws Exception {
+    createDcSchema();
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/dc/validate?version=666").file("document", DC_DOCUMENT.getBytes())).andDo(print()).andExpect(status().isNotFound()).andReturn();
+  }
+
+  @Test
+  public void testValidateKnownVersion() throws Exception {
+    createDcSchema();
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/dc/validate?version=1").file("document", DC_DOCUMENT.getBytes())).andDo(print()).andExpect(status().isNoContent()).andReturn();
+  }
+
+  @Test
+  public void testValidateUnknownSchemaId() throws Exception {
+    createDcSchema();
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/" + INVALID_SCHEMA + "/validate").file("document", DC_DOCUMENT.getBytes())).andDo(print()).andExpect(status().isNotFound()).andReturn();
+  }
+
+  @Test
+  public void testValidateWithInvalidDocument() throws Exception {
     createDcSchema();
     this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/dc/validate").file("document", ("<?xml version='1.0' encoding='utf-8'?>\n"
             + "<oai_dc:dc xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:oai_dc=\"http://www.openarchives.org/OAI/2.0/oai_dc/\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://www.openarchives.org/OAI/2.0/oai_dc/ http://www.openarchives.org/OAI/2.0/oai_dc.xsd\">\n"
@@ -378,12 +546,18 @@ public class SchemaRegistryControllerTest{
   }
 
   @Test
-  public void testValidateWithoutDocument() throws Exception{
+  public void testValidateWithEmptyDocument() throws Exception {
+    createDcSchema();
+    this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/dc/validate").file("document", "".getBytes())).andDo(print()).andExpect(status().isBadRequest()).andReturn();
+  }
+
+  @Test
+  public void testValidateWithoutDocument() throws Exception {
     this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/dc/validate")).andDo(print()).andExpect(status().isBadRequest()).andReturn();
   }
 
   @Test
-  public void testValidateWithoutValidator() throws Exception{
+  public void testValidateWithoutValidator() throws Exception {
     createDcSchema();
 
     //modify DC schema so that it has no validator
@@ -395,7 +569,7 @@ public class SchemaRegistryControllerTest{
   }
 
   @Test
-  public void testValidateWithMissingSchemaFile() throws Exception{
+  public void testValidateWithMissingSchemaFile() throws Exception {
     createDcSchema();
 
     //delete schema file
@@ -405,7 +579,7 @@ public class SchemaRegistryControllerTest{
   }
 
   @Test
-  public void testUpdateRecord() throws Exception{
+  public void testUpdateRecord() throws Exception {
     createDcSchema();
     MvcResult result = this.mockMvc.perform(get("/api/v1/schemas/dc").header("Accept", MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE)).andDo(print()).andExpect(status().isOk()).andReturn();
     String etag = result.getResponse().getHeader("ETag");
@@ -414,29 +588,99 @@ public class SchemaRegistryControllerTest{
     ObjectMapper mapper = new ObjectMapper();
     MetadataSchemaRecord record = mapper.readValue(body, MetadataSchemaRecord.class);
     String mimeTypeBefore = record.getMimeType();
-
     record.setMimeType(MediaType.APPLICATION_JSON.toString());
 
-    result = this.mockMvc.perform(put("/api/v1/schemas/dc").header("If-Match", etag).contentType("application/json").content(mapper.writeValueAsString(record))).andDo(print()).andExpect(status().isOk()).andReturn();
+    result = this.mockMvc.perform(put("/api/v1/schemas/dc").header("If-Match", etag).contentType(MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE).content(mapper.writeValueAsString(record))).andDo(print()).andExpect(status().isOk()).andExpect(redirectedUrlPattern("http://*:*/**/" + record.getSchemaId() + "?version=1")).andReturn();
     body = result.getResponse().getContentAsString();
 
     MetadataSchemaRecord record2 = mapper.readValue(body, MetadataSchemaRecord.class);
-
-    Assert.assertNotEquals(mimeTypeBefore, record.getMimeType());//mime type was changed by update
+    Assert.assertNotEquals(mimeTypeBefore, record2.getMimeType());//mime type was changed by update
     Assert.assertEquals(record.getCreatedAt(), record2.getCreatedAt());
     Assert.assertEquals(record.getSchemaDocumentUri(), record2.getSchemaDocumentUri());
     Assert.assertEquals(record.getSchemaId(), record2.getSchemaId());
     Assert.assertEquals(record.getSchemaVersion(), record2.getSchemaVersion());//version is not changing for metadata update
-    Assert.assertNotEquals(record.getLastUpdate(), record2.getLastUpdate());
+    if (record.getAcl() != null) {
+      Assert.assertTrue(record.getAcl().containsAll(record2.getAcl()));
+    }
+    Assert.assertTrue(record.getLastUpdate().isBefore(record2.getLastUpdate()));
   }
 
   @Test
-  public void testUpdateRecordWithoutBody() throws Exception{
-    this.mockMvc.perform(put("/api/v1/schemas/dc").contentType("application/json")).andDo(print()).andExpect(status().isBadRequest()).andReturn();
+  public void testUpdateRecordWithoutExplizitGet() throws Exception {
+    MetadataSchemaRecord record = new MetadataSchemaRecord();
+    record.setSchemaId("dc");
+    record.setMimeType(MediaType.APPLICATION_XML.toString());
+    record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
+    Set<AclEntry> aclEntries = new HashSet<>();
+    aclEntries.add(new AclEntry("test", PERMISSION.READ));
+    aclEntries.add(new AclEntry("SELF", PERMISSION.ADMINISTRATE));
+    record.setAcl(aclEntries);
+
+    ObjectMapper mapper = new ObjectMapper();
+
+    MockMultipartFile recordFile = new MockMultipartFile("record", "record.json", "application/json", mapper.writeValueAsString(record).getBytes());
+    MockMultipartFile schemaFile = new MockMultipartFile("schema", DC_SCHEMA.getBytes());
+
+    MvcResult result = this.mockMvc.perform(MockMvcRequestBuilders.multipart("/api/v1/schemas/").
+            file(recordFile).
+            file(schemaFile)).andDo(print()).andExpect(status().isCreated()).andReturn();
+    String etag = result.getResponse().getHeader("ETag");
+    String body = result.getResponse().getContentAsString();
+
+    mapper = new ObjectMapper();
+    MetadataSchemaRecord record1 = mapper.readValue(body, MetadataSchemaRecord.class);
+    String mimeTypeBefore = record1.getMimeType();
+    record1.setMimeType(MediaType.APPLICATION_JSON.toString());
+
+    result = this.mockMvc.perform(put("/api/v1/schemas/dc").header("If-Match", etag).contentType(MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE).content(mapper.writeValueAsString(record1))).andDo(print()).andExpect(status().isOk()).andReturn();
+    body = result.getResponse().getContentAsString();
+
+    MetadataSchemaRecord record2 = mapper.readValue(body, MetadataSchemaRecord.class);
+    Assert.assertNotEquals(mimeTypeBefore, record2.getMimeType());//mime type was changed by update
+    Assert.assertEquals(record1.getCreatedAt(), record2.getCreatedAt());
+    Assert.assertEquals(record1.getSchemaDocumentUri(), record2.getSchemaDocumentUri());
+    Assert.assertEquals(record1.getSchemaId(), record2.getSchemaId());
+    Assert.assertEquals(record1.getSchemaVersion(), record2.getSchemaVersion());//version is not changing for metadata update
+    if (record1.getAcl() != null) {
+      Assert.assertTrue(record1.getAcl().containsAll(record2.getAcl()));
+    }
+    Assert.assertTrue(record1.getLastUpdate().isBefore(record2.getLastUpdate()));
   }
 
   @Test
-  public void testDeleteSchemaRecord() throws Exception{
+  public void testUpdateRecordWithoutETag() throws Exception {
+    createDcSchema();
+    MvcResult result = this.mockMvc.perform(get("/api/v1/schemas/dc").header("Accept", MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE)).andDo(print()).andExpect(status().isOk()).andReturn();
+    String body = result.getResponse().getContentAsString();
+    ObjectMapper mapper = new ObjectMapper();
+    MetadataSchemaRecord record = mapper.readValue(body, MetadataSchemaRecord.class);
+
+    record.setMimeType(MediaType.APPLICATION_JSON.toString());
+    this.mockMvc.perform(put("/api/v1/schemas/dc").contentType("application/json").contentType(MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE).content(mapper.writeValueAsString(record))).andDo(print()).andExpect(status().isPreconditionRequired()).andReturn();
+  }
+
+  @Test
+  public void testUpdateRecordWithWrongETag() throws Exception {
+    createDcSchema();
+    MvcResult result = this.mockMvc.perform(get("/api/v1/schemas/dc").header("Accept", MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE)).andDo(print()).andExpect(status().isOk()).andReturn();
+    String etag = result.getResponse().getHeader("ETag") + "unknown";
+    String body = result.getResponse().getContentAsString();
+    ObjectMapper mapper = new ObjectMapper();
+    MetadataSchemaRecord record = mapper.readValue(body, MetadataSchemaRecord.class);
+    this.mockMvc.perform(put("/api/v1/schemas/dc").contentType("application/json").header("If-Match", etag).contentType(MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE).content(mapper.writeValueAsString(record))).andDo(print()).andExpect(status().isPreconditionFailed()).andReturn();
+  }
+
+  @Test
+  public void testUpdateRecordWithoutBody() throws Exception {
+    createDcSchema();
+    MvcResult result = this.mockMvc.perform(get("/api/v1/schemas/dc").header("Accept", MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE)).andDo(print()).andExpect(status().isOk()).andReturn();
+    String etag = result.getResponse().getHeader("ETag");
+
+    this.mockMvc.perform(put("/api/v1/schemas/dc").header("If-Match", etag).contentType(MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE).content("{}")).andDo(print()).andExpect(status().isBadRequest()).andReturn();
+  }
+
+  @Test
+  public void testDeleteSchemaRecord() throws Exception {
     createDcSchema();
 
     MvcResult result = this.mockMvc.perform(get("/api/v1/schemas/dc").header("Accept", MetadataSchemaRecord.METADATA_SCHEMA_RECORD_MEDIA_TYPE)).andDo(print()).andExpect(status().isOk()).andReturn();
@@ -461,11 +705,12 @@ public class SchemaRegistryControllerTest{
             file(schemaFile)).andDo(print()).andExpect(status().isGone()).andReturn();
   }
 
-  private void createDcSchema() throws FileNotFoundException, IOException{
+  private void createDcSchema() throws FileNotFoundException, IOException {
     MetadataSchemaRecord record = new MetadataSchemaRecord();
     record.setCreatedAt(Instant.now());
     record.setLastUpdate(Instant.now());
     record.setSchemaId("dc");
+    record.setSchemaVersion(1l);
     record.setMimeType("application/xml");
     record.setType(MetadataSchemaRecord.SCHEMA_TYPE.XML);
     Set<AclEntry> acl = new HashSet<>();
@@ -476,12 +721,21 @@ public class SchemaRegistryControllerTest{
     record.setAcl(acl);
     record.setSchemaDocumentUri("file:///tmp/dc.xsd");
     record = metadataSchemaDao.save(record);
-
-    try(FileOutputStream fout = new FileOutputStream(new File("/tmp/dc.xsd"))){
-      fout.write(DC_SCHEMA.getBytes());
-      fout.flush();
+    File dcFile = new File("/tmp/dc.xsd");
+    if (!dcFile.exists()) {
+      try (FileOutputStream fout = new FileOutputStream(dcFile)) {
+        fout.write(DC_SCHEMA.getBytes());
+        fout.flush();
+      }
     }
 
     schemaAuditService.captureAuditInformation(record, "TEST");
+  }
+
+  private static RequestPostProcessor remoteAddr(final String remoteAddr) { // it's nice to extract into a helper
+    return (MockHttpServletRequest request) -> {
+      request.setRemoteAddr(remoteAddr);
+      return request;
+    };
   }
 }
